<resources>
    <string name="app_name">Shoe Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_textView">Shoe Store</string>
    <string name="login_image_displayed">Login Image</string>
    <string name="username_address_hint">Username</string>
    <string name="login_password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome to Shoe Store</string>
    <string name="about_the_app">Amazing app to create an inventory for your store. Provide few details and with a simple click, you can add a new pair of shoes inside your stock.
 Enjoy!</string>
    <string name="warehouse_button">Warehouse</string>
    <string name="add_shoe_button">Add New Model</string>
    <string name="add_new_shoe_flot_button">add new shoe button</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="size">Size:</string>
    <string name="company">Company</string>
    <string name="description">Description</string>
    <string name="add_shoes_btn">Add New Shoes</string>
    <string name="jordan_image">jordan shoes</string>
    <string name="shoes_name">Shoes Name</string>
    <string name="name_of_the_shoes">Name of the shoes</string>
    <string name="size_number">Size number</string>
    <string name="size_of_the_shoes">Size of the shoes</string>
    <string name="company_of_the_shoes">Company of the shoes</string>
    <string name="description_of_the_shoes">Description of the shoes</string>
    <string name="name">Name:</string>
    <string name="brand">Brand:</string>
    <string name="style">Style:</string>
    <string name="image_delete">image delete</string>
    <string name="logout">Log Out</string>
    <string name="rules">Rules</string>
    <string name="about">About</string>
    <string name="about_app">About the App</string>
    <string name="about_text">This app is designed to help you organize the warehouse. Every time you get a new pair of shoes, you can easily add it to the list by passing a few specifics of it. This is the perfect app to organize your work and increase your sales by having everything stored and easy to find! Enjoy the Shoe Store app and get your job done!</string>
    <string name="first_rule" >1. Provide an username and a password in order to create a profile and access to your warehouse</string>
    <string name="second_rule" >2. Inside the Warehouse you need to press the blue button to add new shoes to the list</string>
    <string name="third_rule">3. In order to add a new pair of shoes, you need to provide NAME, SIZE ( 43 EU, 9 US..), COMPANY, and DESCRIPTION (white/man/winter)</string>
    <string name="forth_rule">4. You can always delete a pair from the list by pressing the red delete button on the side of each pair of shoes you added</string>
    <string name="fifth_rule">5. On the top right of the Warehouse page you can find a Logout menu to go back to the Login page</string>
    <string name="image_about">image about</string>
    <string name="boot_image">boot image</string>
    <string name="shop_image">shop image</string>

</resources>
