<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="shoesListSharedViewModel"
            type="com.udacity.shoestore.shoesList.ShoesListSharedViewModel" />
    </data>

<LinearLayout
    android:id="@+id/newShoeObjectLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="10dp"
    android:layout_marginBottom="@dimen/smallest_padding"
    android:background="@drawable/view_borders">

    <ImageView
        android:id="@+id/newShoeImageView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/jordan_image"
        android:src="@drawable/ic_sneaker_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/shoeBioLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:paddingStart="15dp"
                    android:paddingEnd="2dp"
                    android:text="@string/name"
                    android:textColor="#040506"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:hint="@string/name_of_the_shoes"
                    android:paddingStart="@dimen/smallest_padding"
                    android:paddingEnd="@dimen/smallest_padding"
                    android:textColor="#040506"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:paddingStart="15dp"
                    android:paddingEnd="2dp"
                    android:text="@string/size"
                    android:textColor="#040506"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tv_size"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:hint="@string/size_of_the_shoes"
                    android:paddingStart="@dimen/smallest_padding"
                    android:paddingEnd="@dimen/smallest_padding"
                    android:textColor="#040506"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:paddingStart="15dp"
                    android:paddingEnd="2dp"
                    android:text="@string/brand"
                    android:textColor="#040506"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tv_company"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:hint="@string/company_of_the_shoes"
                    android:paddingStart="@dimen/smallest_padding"
                    android:paddingEnd="@dimen/smallest_padding"
                    android:textColor="#040506"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:paddingStart="15dp"
                    android:paddingEnd="2dp"
                    android:text="@string/style"
                    android:textColor="#040506"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:hint="@string/description_of_the_shoes"
                    android:paddingStart="@dimen/smallest_padding"
                    android:paddingEnd="@dimen/smallest_padding"
                    android:textColor="#040506"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

    <ImageButton
        android:id="@+id/ib_delete_shoe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/small_padding"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/image_delete"
        android:padding="3dp"
        android:src="@drawable/ic_delete_image" />
</LinearLayout>
</layout>